[package]
name = "process-exporter"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.36.1"
regex = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"

# eBPF 相关
aya = { version = "0.13.1", features = ["async_tokio"] }
aya-log = "0.2"

# Prometheus SDK
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

[[bin]]
name = "process-exporter"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
