[package]
name = "process-exporter-ebpf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "network-monitor"
path = "src/main.rs"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
codegen-units = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
debug = false